tests/ui/const-generics/generic_const_exprs/simple_fail.stderr
error[E0080]: evaluation of `test::<0>::{constant#0}` failed
  --> $DIR/simple_fail.rs:9:10
   |
LL |     [u8; N - 1]: Sized,
   |          ^^^^^ attempt to compute `0_usize - 1_usize`, which would overflow

error[E0080]: evaluation of `Arr::<0>::{constant#0}` failed
  --> $DIR/simple_fail.rs:4:33
   |
LL | type Arr<const N: usize> = [u8; N - 1];
   |                                 ^^^^^ attempt to compute `0_usize - 1_usize`, which would overflow

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
